--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,10 @@ body{
     width: 100vw;
     height: 100vh;
 }
+
+#right{
+    position:relative;
+    width: 10%;
+    height: 100vh;
+    border: 50px solid greenyellow;
+}
